# wos-auto

./: .gitignore  main.py  pyproject.toml
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/release/: output-metadata.json
app/app/release/baselineProfiles/0/: app-release.dm
app/app/release/baselineProfiles/1/: app-release.dm
app/app/src/androidTest/java/com/example/wosauto/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/wosauto/: MainActivity.kt  MjpegServer.kt  ScreenCaptureService.kt  Utils.kt
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/com/example/wosauto/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
client/: adb.py  image.py  main.py  net.py  process.py  readme.md  template.py  test.py  utils.py
